<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/awake_title"
        android:id="@+id/awake_picker_title"
        android:textStyle="bold"/>
    
    <NumberPicker android:id="@+id/start_hour_picker"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/awake_picker_title"
    	android:orientation="vertical"/>
    
    <NumberPicker
        android:id="@+id/end_hour_picker"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/awake_picker_title"
        android:layout_alignParentEnd="true"
        android:orientation="vertical" />
    
    <View 
        android:id="@+id/hr1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_height="1px" 
        android:layout_width="fill_parent" 
        android:layout_below="@+id/end_hour_picker"
        android:background="#000000"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hr1"
        android:text="@string/timer_title"
        android:id="@+id/timerTitle"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <RadioGroup android:id="@+id/timer_group"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/timerTitle"
	    android:orientation="vertical">
	    
	    <RadioButton android:id="@+id/debug_wait_time"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:text="@string/debug_wait"
	        android:onClick="onRadioButtonClicked"/>
	    
	    <RadioButton android:id="@+id/default_wait_time"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:text="@string/default_wait"
	        android:checked="true"
	        android:onClick="onRadioButtonClicked"/>
	   
	    <RadioButton android:id="@+id/third_wait_time"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:text="@string/third_wait"
	        android:onClick="onRadioButtonClicked"/>
	    
	   	<RadioButton android:id="@+id/long_wait_time"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:text="@string/long_wait"
	        android:onClick="onRadioButtonClicked"/>
	    
	</RadioGroup>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_notify"
            android:id="@+id/btnClearNotify"
            android:onClick="buttonClicked"
            android:layout_below="@+id/timer_group"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

     <View 
        android:id="@+id/hr2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_height="1px" 
        android:layout_width="fill_parent" 
        android:layout_below="@+id/btnClearNotify"
        android:background="#000000"/>
        
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_below="@+id/hr2"
            android:text="@string/listener_title"
            android:id="@+id/statusView"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/statusView"
            android:text="@string/awake_select"
            android:id="@+id/awakeView"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/awakeView"
            android:text="@string/timer_select"
            android:id="@+id/timerView"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/timerView"
                android:layout_alignEnd="@+id/btnClearNotify"
                android:layout_alignStart="@+id/btnClearNotify">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/listener_name"
                android:id="@+id/listenerView"/>
    </ScrollView>


</RelativeLayout>
